--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="utf-8">
-  <title>Dot and Box</title>
+  <title>Dots and Boxes</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
